examples/test/testpolicy11540.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11540
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key28: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value15
          key36: value35
      podSelector:
        matchLabels:
          key19: value43
          key2: value32
